# ChatNotifier

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  default.nix  flake.nix  napi.lua  shell.nix  xmake.lua
.github/workflows/: cmake-windows-x86_64.yml  windows-x86_64.yml
Assets/TriggerASCII/: awoo.txt  nya.txt
Assets/TriggerSounds/: tutturuu.opus
Scripts/: ding.py  example.py  pythontest.py  tts.py
Source/: CMakeLists.txt  assets.cppm  audio.cppm  commands.cppm  common.cppm  config.cppm  effect.cppm  filesystem.cppm  gui.cppm  jsoned.cppm  main.cpp  notification.cppm  opengl.cppm  opus_decoder.cppm  runner.cppm  scripting.cppm  scripting_py.cppm  standard.cppm  tts.cppm  twitch.cppm  types.cppm
Source/libchatnotifier/: CMakeLists.txt  assets.cppm  audio.cppm  commands.cppm  common.cppm  config.cppm  effect.cppm  filesystem.cppm  gui.cppm  napi.cppm  notification.cppm  opengl.cppm  runner.cppm  scripting.cppm  scripting_py.cppm  standard.cppm  standard.hpp  twitch.cppm  types.cppm
Source/libchatnotifier/glad/: gl.c  gl.h
Source/libchatnotifier/imgui/: imgui_impl_glad.cpp  imgui_impl_glad.hpp  imgui_impl_glfw.cpp
Source/miniaudio/: miniaudio_libopus.h  miniaudio_opus.h
UI/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
UI/src/components/: Sidebar.astro  SidebarItem.astro
UI/src/electron/: main.ts  preload.ts
UI/src/layouts/: MainLayout.astro
UI/src/pages/: about.astro  assets.astro  audio.astro  connection.astro  cooldowns.astro  index.astro  notifications.astro  users.astro
UI/src/scripts/: helpers.ts
cmake/: 0002-Fix-sndfile-opus.patch  0003-Fix-flac-cmake.patch  0004-Fix-openal-cmake.patch  fix-piper.patch
cmake/modules/: FetchDeps.cmake
cmake/patches/: 0001-Fix-cpp20-build.patch
nix/pkgs/imgui/: 0001-Add-transparency-flag-to-viewports.patch  default.nix
